Fix visibility in task panel, TAB and Enter keys, login validation of login window and add TextLimiter

--- a/src/main/resources/css/loginLayout.css
+++ b/src/main/resources/css/loginLayout.css
@@ -8,3 +8,18 @@
 .base-font{
     -fx-background-color: white;
 }
+.undecorator-background {
+    -fx-background-radius: 6;
+
+    -fx-border-color: gray;
+
+    -fx-border-style: solid;
+
+    -fx-border-width: 1;
+
+    -fx-border-radius: 6;
+
+    -fx-background-radius: 6;
+
+    -fx-effect: dropshadow(three-pass-box, rgba(100, 100, 100, 1), 24, 0.5, 0, 0);
+}
